--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,7 +8,7 @@ nav {
   color: #505050;
 }
 .nav-ul a {
-  font-family: "Montserrat";
+  font-family: var(--font-montserrat);
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
@@ -20,7 +20,7 @@ nav {
 .nav-btn {
   padding: 9px 40px;
   background: #ffffff;
-  font-family: "Montserrat";
+  font-family: var(--font-montserrat);
   letter-spacing: 2px;
   font-weight: 600;
   border: 1px solid #505050;
@@ -30,7 +30,7 @@ nav {
 .user-btn {
   padding: 5px 12px;
   background: #eb334a;
-  font-family: "Montserrat";
+  font-family: var(--font-montserrat);
   color: #fff;
   letter-spacing: 2px;
   font-size: 14px;
@@ -53,7 +53,7 @@ nav {
   border-top: 7px solid #e1e1e1;
 }
 .mob_nav {
-  font-family: "Montserrat";
+  font-family: var(--font-montserrat);
 }
 .mob_nav li {
   padding-bottom: 20px;
